--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "description": "A sample code for the simplest client side router https://github.com/visionmedia/page.js",
   "main": "app.js",
-  "dependencies": {},
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.1.1",
+    "knockout": "^3.4.1",
+    "page": "^1.7.1",
+    "raw-loader": "^0.5.1"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
